Add: step 7 dockerized
